[metadata]
name = rowantree.auth.api
version = 0.1.0
author = Joshua C. Burt
author_email = joshburt@shapeandshare.com
description = The Rowan Tree Authentication and Authorization API
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requires = >=3.9
install_requires =
    rowantree.auth.service~=0.12

package_dir =
    =src
packages = find_namespace:

[options.packages.find]
where = src
